--- a/LiveReindexInElasticsearch.csproj
+++ b/LiveReindexInElasticsearch.csproj
@@ -63,8 +63,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reindex\CreateIndexPersonV1.cs" />
     <Compile Include="Reindex\PersonV1IndexTypeMapping.cs" />
+    <Compile Include="Reindex\PersonV2IndexTypeMapping.cs" />
+    <Compile Include="Reindex\ReindexPersonV1ToPersonV2.cs" />
     <Compile Include="SQLDomainModel\ModelPerson.cs" />
     <Compile Include="SQLDomainModel\Person.cs" />
+    <Compile Include="SQLDomainModel\PersonV2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
