--- a/LiveReindexInElasticsearch.csproj
+++ b/LiveReindexInElasticsearch.csproj
@@ -32,9 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ElasticsearchCRUD, Version=1.0.13.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ElasticsearchCRUD, Version=1.0.14.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\ElasticsearchCRUD.1.0.13\lib\net45\ElasticsearchCRUD.dll</HintPath>
+      <HintPath>ElasticsearchCrudDlls\ElasticsearchCRUD.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework">
       <HintPath>packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
@@ -42,9 +42,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>ElasticsearchCrudDlls\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -61,17 +61,14 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reindex\CreateIndexPersonV1.cs" />
-    <Compile Include="Reindex\PersonV1IndexTypeMapping.cs" />
-    <Compile Include="Reindex\PersonV2IndexTypeMapping.cs" />
-    <Compile Include="Reindex\ReindexPersonV1ToPersonV2.cs" />
+    <Compile Include="CreateIndexPersonV1.cs" />
+    <Compile Include="Reindex\PersonReindexConfiguration.cs" />
     <Compile Include="SQLDomainModel\ModelPerson.cs" />
     <Compile Include="SQLDomainModel\Person.cs" />
     <Compile Include="SQLDomainModel\PersonV2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
